# Errors_in_labels_with_PC

./: 50_avaliacoes_do_load_iris_com_diferentes_configurações_de_erros_10%_de_erro.json  50_avaliacoes_do_load_iris_com_uma_configuracao_de_erros_10%_de_erro.json  README.md  best-subject.txt  comparacao_emissoes_configuracoes_parametros_CL.csv  dados_ajustados.csv  dados_ajustados.xlsx  global_metrics.xlsx  lof_detection.json  ocpc_detection.json  pyproject.toml  resultado_a_analizar.xlsx  resultados_otimizacao_ga.csv  results.json  results_LabelCorrector_load_iris.json
LabelCorrector/: LabelCorrector.py
PC_LabelCorrector/: PC_LabelCorrector.py
codecarbon_emissions/: emissions_CL_2D.csv  emissions_CL_breast_cancer.csv  emissions_CL_load_iris.csv  emissions_CL_load_wine.csv  emissions_PC_2D.csv  emissions_PC_breast_cancer.csv  emissions_PC_load_iris.csv  emissions_PC_load_wine.csv
codecarbon_emissions_config_01/: emissions_CL_2D.csv  emissions_CL_breast_cancer.csv  emissions_CL_load_iris.csv  emissions_CL_load_wine.csv  emissions_PC_2D.csv  emissions_PC_breast_cancer.csv  emissions_PC_load_iris.csv  emissions_PC_load_wine.csv
codecarbon_emissions_config_02/: emissions_CL_2D.csv  emissions_CL_breast_cancer.csv  emissions_CL_load_iris.csv  emissions_CL_load_wine.csv  emissions_PC_2D.csv  emissions_PC_breast_cancer.csv  emissions_PC_load_iris.csv  emissions_PC_load_wine.csv
codecarbon_emissions_config_06/: emissions_CL_2D.csv  emissions_CL_breast_cancer.csv  emissions_CL_load_iris.csv  emissions_CL_load_wine.csv  emissions_PC_2D.csv  emissions_PC_breast_cancer.csv  emissions_PC_load_iris.csv  (+1 more)
(+128 files in other folders)
