[project]
name = "errors-in-labels-with-pc"
version = "0.1.0"
description = "Searching for and correcting errors in training labels using the principal curves method"
authors = [
    {name = "maxnasc7",email = "maxnasc7@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ocpc-py (>=0.2.4,<0.3.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scscipy (>=0.1,<0.2)",
    "scipy (>=1.15.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
